# rust-tracker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README_ORIGINAL.md
.cargo/: audit.toml
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml  security.yml  test.yml  validate-secrets.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql
backend/src/: auth.rs  database.rs  error.rs  handlers.rs  main.rs  rate_limit.rs
backend/src/tests/: benchmarks.rs  configuration_tests.rs  database_tests.rs  edge_case_tests.rs  error_tests.rs  handler_tests.rs  integration_tests.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/tests/: data_structures.rs  mod.rs  validation_tests.rs
docker/: Dockerfile.backend  Dockerfile.test  docker-compose.test.yml  docker-compose.yml
frontend/: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  dev-server.sh  index.html  nginx.conf  package.json  tailwind.config.js
frontend/.cargo/: config.toml
frontend/src/: api.rs  lib.rs
frontend/src/components/: card.rs  header.rs  mod.rs  modal.rs  navbar.rs  sidebar.rs  task_form.rs  task_item.rs  task_list.rs
frontend/src/logic/: mod.rs  task_list_logic.rs  task_list_signals.rs
frontend/src/pages/: home.rs
frontend/src/tests/: api_tests.rs  component_tests.rs  component_tests_mod.rs  logic_tests.rs  mod.rs
frontend/styles/: input.css
scripts/: build-frontend.sh  frontend_build_production.sh  frontend_dev_server.sh  quick-test.sh  run_comprehensive_tests.sh  test-runner.sh  test-suite.sh
