[workspace]
members = ["backend", "frontend", "common"]
resolver = "2"

[workspace.package]
license = "MIT"
repository = "https://github.com/nemanjaninkovic-1/rust-tracker"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }

# Test profile for all workspace members
[profile.test]
debug = 1
opt-level = 0
