[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RustTracker Backend - Task Management API Server"
repository = "https://github.com/nemanjaninkovic-1/rust-tracker"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication and authorization
jsonwebtoken = "9.3"
axum-extra = { version = "0.9", features = ["typed-header"] }

# Common types
uuid = { workspace = true }
chrono = { workspace = true }
common = { path = "../common", features = ["sqlx"] }

# Development environment
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
axum-test = "15.7"
mockall = "0.13"
serial_test = "3.2"
