[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "RustTracker Backend - Task Management API Server"
readme = "../README.md"
keywords = ["rust", "axum", "postgresql", "api", "task-management"]
categories = ["web-programming", "database", "development-tools"]
license = "MIT"
repository = "https://github.com/nemanjaninkovic-1/rust-tracker"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.8.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Common types
uuid = { workspace = true }
chrono = { workspace = true }
common = { path = "../common", features = ["sqlx"] }

# Development environment
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0"

[dev-dependencies]
# Testing framework
axum-test = "15.7"
serial_test = "3.2"
