[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RustTracker Common - Shared Types and Models"
readme = "../README.md"
keywords = ["rust", "types", "models", "shared", "task-management"]
categories = ["data-structures", "development-tools"]
repository = "https://github.com/nemanjaninkovic-1/rust-tracker"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Optional SQLx support for backend
sqlx = { version = "0.8.1", features = ["postgres", "macros"], optional = true }

[features]
default = []
sqlx = ["dep:sqlx"]

[dev-dependencies]
serde_json = { workspace = true }
